--- a/ej3/ejercicio3.css
+++ b/ej3/ejercicio3.css
@@ -47,3 +47,28 @@ img { border: none; }
    A partir de aquí, se pueden añadir todos los estilos propios que 
    sean necesarios.
    ================================================================== */
+#cabecera { padding:1em; }
+
+#menu {
+   padding:0.5em;
+   margin-bottom: 0.5em;
+}
+
+#noticias, #publicidad, #principal, #secundario {
+   padding:0.5em;
+}
+#pie { 
+   padding: 0.5em 0.5em;
+   margin-top: 1em;
+}
+
+.articulo { 
+   margin: 0 1em 0 1em; 
+}
+
+.articulo img {
+   margin: 0.5em;
+}
+#publicidad {
+   margin-top: 1em;
+}
